# To_Do_List

./: .gitignore  CMakeLists.txt  README.md  SectionDelegate.qml  TaskDelegate.qml  TaskField.qml  TasksModel.qml  main.cpp  main.qml  main.qml.autosave  qml.qrc
include/to-do-list/: sortedmodel.h  sortedtasks.h  task.h  taskmodel.h
resources/: TaskDelegate.qml  TaskField.qml  TasksModel.qml  main.qml
resources/icons/: icons.qrc
resources/qml/: SectionDelegate.qml  TaskDelegate.qml  TaskField.qml  TasksList.qml  TasksModel.qml  ToDoStyle.qml  main.qml  qml.qrc  qmldir
src/: main.cpp  sortedmodel.cpp
src/to-do-list/: main.cpp  sortedmodel.cpp  sortedtasks.cpp  task.cpp  taskmodel.cpp
